src/objects/Rollupparameter__c.object
<CustomObject>
    <fields>
        <fullName>DestFieldApi__c</fullName>
        <label>DestFieldApi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionName__c</fullName>
        <label>FunctionName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TtendToCash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollupparameter</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>